WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115956
REGRESSION(
r149287
): FoldingText only shows me half of my text.
https://bugs.webkit.org/show_bug.cgi?id=115956
Summary
REGRESSION(r149287): FoldingText only shows me half of my text.
Andreas Kling
Reported
2013-05-11 07:19:38 PDT
<
rdar://problem/13831099
>
Attachments
Proposed patch
(4.12 KB, patch)
2013-05-11 07:28 PDT
,
Andreas Kling
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-05-11 07:28:39 PDT
Created
attachment 201458
[details]
Proposed patch
Andreas Kling
Comment 2
2013-05-12 15:35:44 PDT
Also for <
rdar://problem/13871118
>
Antti Koivisto
Comment 3
2013-05-13 07:30:19 PDT
Comment on
attachment 201458
[details]
Proposed patch r=me
Andreas Kling
Comment 4
2013-05-13 07:55:07 PDT
Committed
r150011
: <
http://trac.webkit.org/changeset/150011
>
Andreas Kling
Comment 5
2013-05-14 09:30:25 PDT
***
Bug 115994
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug