REGRESSION(r149287): FoldingText only shows me half of my text. <http://webkit.org/b/115956> <rdar://problem/13831099>

Reviewed by Antti Koivisto.

Check if the FrameView geometry changed post-layout, and send a resize event if needed.
This brings us closer to the original resize event behavior, with the exception that
setFrameRect() still fires an event right away if possible. This means we are still
guarded from FOUC's but frames that layout via [WebHTMLView layoutToMinimumPageWidth]
also get resize events like they used to.

No new tests, because I don't know how to test this.

* page/FrameView.h:
* page/FrameView.cpp:
(WebCore::FrameView::setFrameRect):
(WebCore::FrameView::performPostLayoutTasks):
(WebCore::FrameView::sendResizeEventIfNeeded):

    Factor out the resize event logic from setFrameRect() so we can call it from both
    there and performPostLayoutTasks(). sendResizeEventIfNeeded() only sends an event
    if view geometry or zoom factor has changed since last time it was called.

Canonical link: https://commits.webkit.org/134444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150011 268f45cc-cd09-0410-ab3c-d52691b4dbfc